fix(design.elvia.io): align top left logo with figma design for mobile and tablet

--- a/packages/web/src/app/shell/header/header.component.scss
+++ b/packages/web/src/app/shell/header/header.component.scss
@@ -23,6 +23,10 @@
     cursor: pointer;
     margin-left: 32px;
 
+    @include breakpoints.breakpoint-up(Tablet) {
+      margin-left: 24px;
+    }
+
     @include breakpoints.breakpoint-up(Mobile) {
       margin-left: 16px;
     }
